Interfaces de servicio, SonarLint arreglado