@@ -12,15 +12,18 @@ import model.Order;
 import model.OrderItem;
 import model.User;
 import services.CustomerService;
-import services.OrderItemsService;
+import services.OrderItemService;
 import services.OrderService;
 import ui.screens.common.BaseScreenController;
 
 import java.io.IOException;
 import java.security.Timestamp;
-import java.util.stream.Collectors;
 
 public class ShowOrderController extends BaseScreenController {
+    private final OrderService orderService;
+    private final OrderItemService orderItemService;
+    private final CustomerService customerService;
+
     @FXML
     public TableView<Order> ordersTable;
     @FXML
@@ -35,9 +38,7 @@ public class ShowOrderController extends BaseScreenController {
     public TableColumn<Integer, OrderItem> quantityItemColumn;
     @FXML
     public TableColumn<OrderItem, String> nameItemColumn;
-    private final OrderService orderService;
-    private final OrderItemsService orderItemsService;
-    private final CustomerService customerService;
+
     @FXML
     public ComboBox<String> filterComboBox;
     @FXML
@@ -56,14 +57,14 @@ public class ShowOrderController extends BaseScreenController {
 
 
     @Inject
-    public ShowOrderController(OrderService orderService, OrderItemsService orderItemsService, CustomerService customerService) {
+    public ShowOrderController(OrderService orderService, OrderItemService orderItemService, CustomerService customerService) {
         this.orderService = orderService;
-        this.orderItemsService = orderItemsService;
+        this.orderItemService = orderItemService;
         this.customerService = customerService;
     }
 
 
-    public void initialize() throws IOException {
+    public void initialize() {
         idOrderColumn.setCellValueFactory(new PropertyValueFactory<>("orderId"));
         dateOrderColumn.setCellValueFactory(new PropertyValueFactory<>("date"));
         customerOrderColumn.setCellValueFactory(new PropertyValueFactory<>("customerId"));
@@ -72,7 +73,6 @@ public class ShowOrderController extends BaseScreenController {
         quantityItemColumn.setCellValueFactory(new PropertyValueFactory<>("quantity"));
         ordersTable.setOnMouseClicked(this::handleTableClick);
 
-//        filterComboBox.getItems().addAll("Default", "Date", "Customer");
         customerOrderComboBox.getItems().addAll(customerService.getAll().get().stream().map(Customer::getId).toList());
 
         customerOrderComboBox.setVisible(false);
@@ -82,9 +82,9 @@ public class ShowOrderController extends BaseScreenController {
 
     private void handleTableClick(MouseEvent event) {
         if (event.getClickCount() == 1) {
-            Order selectedOrder = ordersTable.getSelectionModel().getSelectedItem();
-            if (selectedOrder != null) {
-                this.selectedOrder = selectedOrder;
+            Order newSelectedOrder = ordersTable.getSelectionModel().getSelectedItem();
+            if (newSelectedOrder != null) {
+                this.selectedOrder = newSelectedOrder;
             }
         }
         setOrderItemTable();
@@ -92,7 +92,7 @@ public class ShowOrderController extends BaseScreenController {
 
     @Override
     public void principalCargado() throws IOException {
-        actualUser = getPrincipalController().actualUser;
+        actualUser = getPrincipalController().getActualUser();
 
         if (actualUser.getId() < 0) {
             filterComboBox.getItems().addAll("Default", "Date", "Customer");
@@ -120,7 +120,7 @@ public class ShowOrderController extends BaseScreenController {
 
     private void setOrderItemTable() {
         if (selectedOrder != null) {
-            orderItemsService.getAllOrderItems(selectedOrder.getOrderId())
+            orderItemService.getAllOrderItems(selectedOrder.getOrderId())
                     .peek(orderItems -> itemsTable.getItems().setAll(orderItems))
                     .peekLeft(noItems -> itemsTable.getItems().clear());
             customerService.get(selectedOrder.getCustomerId())
@@ -147,7 +147,7 @@ public class ShowOrderController extends BaseScreenController {
                     orderService.getAll()
                             .map(orders -> orders.stream()
                                     .filter(order -> order.getDate().toLocalDateTime().toLocalDate().equals(dateField.getValue()))
-                                    .collect(Collectors.toList()))
+                                    .toList())
                             .peek(ordersTable.getItems()::addAll)
                             .peekLeft(orderError -> getPrincipalController().showErrorAlert(orderError.getMessage()));
                     dateField.setValue(null);
@@ -170,7 +170,7 @@ public class ShowOrderController extends BaseScreenController {
                                         String customerIdAsString = String.valueOf(order.getCustomerId());
                                         return customerIdAsString.equals(customerOrderComboBox.getValue().toString());
                                     })
-                                    .collect(Collectors.toList()))
+                                    .toList())
                             .peek(ordersTable.getItems()::addAll)
                             .peekLeft(orderError -> getPrincipalController().showErrorAlert(orderError.getMessage()));
                 }
